<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_activities"
        android:icon="@drawable/ic_volunteer"
        android:title="@string/menu_activities" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_event"
        android:title="@string/menu_events" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_photo_library"
        android:title="@string/menu_gallery" />
    <item
        android:id="@+id/nav_membership"
        android:icon="@drawable/ic_person_add"
        android:title="@string/menu_membership" />
</menu>