<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="8dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_nav_header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/nav_header_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_nav_header_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_nav_header_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/role_visitor"
        android:textAlignment="center"
        android:textColor="#B0FFFFFF"
        android:textSize="12sp" />
</LinearLayout>