<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_login"
        android:title="@string/menu_login"
        android:visible="true" />



    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/auth_logout"
        android:visible="false" />

    <!-- Member Actions Menu (visible only when logged in) -->
    <item
        android:id="@+id/nav_member_menu"
        android:icon="@drawable/ic_person"
        android:title="Mon Espace"
        android:visible="true">

        <menu>
            <item
                android:id="@+id/nav_member_profile"
                android:title="Voir Mon Profil" />
            <item
                android:id="@+id/nav_member_history"
                android:title="Historique d'Adhésion" />
            <item
                android:id="@+id/nav_member_settings"
                android:title="Paramètres" />
            <item
                android:id="@+id/nav_member_gallery"
                android:title="Galerie Photos &amp; Vidéos" />
            <item
                android:id="@+id/nav_member_documents"
                android:title="Documents Officiels" />
            <item
                android:id="@+id/nav_member_events"
                android:title="Événements &amp; Activités" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_settings" />

</menu>

